stesura prima parte banner

--- a/index.html
+++ b/index.html
@@ -8,6 +8,31 @@
     <title>Discord</title>
 </head>
 <body>
+    <header> 
+        <div class="menu">
+            <img src="./asset/img/logo.svg" alt="logo discord" class="logo">
+            <nav class="sezione-centrale">
+                <ul>
+                    <li><a href="#">Scarica</a></li>
+                    <li><a href="#">Perchè Discord</a></li>
+                    <li><a href="#">Nitro</a></li>
+                    <li><a href="#">Sicurezza</a></li>
+                    <li><a href="#">Assistenza</a></li>
+                </ul>
+
+                <a href="#" class="access-button">Accedi</a>
+            </nav>
+    </header>
     
+
+    <div class="banner">
+        <main>
+            
+            <h1>Il tuo posto per parlare</h1>
+            <p>Che tu faccia parte di un club scolastico, gruppo di gamer, comunità artistica mondiale, o semplicemente di un piccolo gruppo di amici che vuole passare il tempo assieme, Discord rende più facile chiacchierare ogni giorno e ritrovarsi più spesso.</p>
+
+        </main>
+    </div>
+
 </body>
 </html>
