--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
 
     <div class="banner">
         <main>
-            
             <h1>Il tuo posto per parlare</h1>
             <p>Che tu faccia parte di un club scolastico, gruppo di gamer, comunità artistica mondiale, o semplicemente di un piccolo gruppo di amici che vuole passare il tempo assieme, Discord rende più facile chiacchierare ogni giorno e ritrovarsi più spesso.</p>
-
+            <a href="#" class="download underline"> Scarica per Mac</a>
+            <a href="#" class="web-version underline"> Apri Discord nel tuo browser</a>        
         </main>
     </div>
 
