stesura parziale paragrafo 4

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </div>
         
     </section>
-    <!-- Onda -->
+    <!-- Onda grigia-->
     <img src="./asset/img/wave.svg" alt="onda" class="onda" style="filter: invert(95%) sepia(60%) saturate(59%) hue-rotate(30deg) brightness(114%) contrast(93%);">
 
 
@@ -53,7 +53,7 @@
         </div>
 
     </section>
-    <!-- Onda -->
+    <!-- Onda bianca-->
     <img src="./asset/img/wave.svg" alt="onda" class="onda2" style="filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(306deg) brightness(103%) contrast(101%);">
 
     <section> <!-- Paragrafo 3  -->
@@ -65,9 +65,15 @@
         </div>
         
     </section>
-    <!-- Onda -->
+    <!-- Onda grigia-->
     <img src="./asset/img/wave.svg" alt="onda" class="onda" style="filter: invert(95%) sepia(60%) saturate(59%) hue-rotate(30deg) brightness(114%) contrast(93%);">
 
+    <section class="bg-grey full"> <!-- Paragrafo 4  -->
+        <div class="central-text">
+           <h2 class="title">Tecnologia affidabile per tenersi in contatto</h2> 
+           <p class="description2">Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione schermo</p>
+           <img src="./asset/img/item4-big.svg" alt="condivisione schermo">
+    </section>
 
 </body>
 </html>
